--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,5 +3,5 @@
 github: risetogethercommunity
 patreon: risetogethercommunity
 open_collective: rise-together
-thanks_dev: logicbyroshan
+thanks_dev: gh/risetogethercommunity
 custom: ['https://www.risetogether.tech/']
